--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .foot{
     height: 50vh;
     width: 100vw;
-    background-color: #df88b0;
+    background-color: #be4380;
 }
 .foot h1{
     text-align: center;
