--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,38 +1,56 @@
 .about{
-    height: 100vh;
-    width: 100vw;
-    background-repeat: no-repeat;
-    background-image:url(surfer.png); 
-    background-position-x: 80% ;
-    background-position-y: center ;
-    font-size: 20px;
-    position: relative;
-    margin-top: 13%;
+    width: 100%;
+    font-size: 1.5vw;
+    margin: 7% 0% 7% 0%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
 }
 
 #description{
-    min-height: 200px;
-    max-width: 500px;
+    min-height: 20vw;
+    max-width: 40vw;
      color: aliceblue;
     border-radius: 10px;
-    position: absolute;
-    top: 15%;
-    left: 20%;
-    list-style: none;
-   
+    list-style: none;  
+    padding-top:5vw;
 }
 #a1{
-    font-size: 70px;
+    font-size: 3.8em;
     font-weight: 600;
 }
 #a2{
-    font-size: 25px;
+    font-size: 1.4em;
     font-weight: 600;
 }
-desc div ,button{
+.but-set button{
     font-weight: 600;
    padding:10px 20px 10px 15px;
    margin: 4% 5% 0% 0%;
    border-radius: 5px;
    border: 0px ;
+   cursor: pointer;
+}
+.about img{
+    width: 35vw;
+}
+
+@media(max-width:680px){
+    .about{
+        font-size: 2.2vw;
+    }
+    .about img{
+        width: 40vw;
+    }
+    #line{
+        display: none;
+    }
+    #description{
+        min-height: 20vw;
+        max-width: 45vw;
+    }
+    #a1{
+        font-size: 1.5rem;
+    }
 }
