--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,24 +1,78 @@
-.home{
-    /* position: absolute;
-    top: 40%;
-    left:27%; */
+    .MOB-VIEW{
+        display: none;
+    }
+    .DESK-VIEW{
+        width: 100%;
+        color: white;
+        position: relative;
+        pointer-events: none;
+    }
+    .home{
     text-align: center;
     color: white;
     margin-top: 7%;
+    z-index: 1;
+    position: absolute;
+    top: 7%;
+    left: 15%;
+    font-size: 1vw;
 }
+#imagee{
+    margin-top: -6vw;
+    z-index: -1;
+    width: 100%;
+    }
 #h1{
-    font-size: 42px;
+    font-size: 4.2em;
     font-weight: 400;
     opacity: 90%;
 }
 #h2{
-    font-size: 80px;
+    font-size: 8em;
     font-weight: 800;
     opacity: 80%;
 }
 
 #h3{
-    font-size: 55px;
+    font-size: 5.5em;
     font-weight:400;
     opacity: 70%;
+}
+#h{
+    color: aquamarine;
+}
+@media (max-width:680px){
+    .DESK-VIEW{
+        display: none;
+    }
+    .MOB-VIEW{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+        height: 100vh;
+        color: white;
+        padding: 10vw 0vw;
+    }
+    .home-mob{
+        display: 100;
+        font-size: 6px;
+        display: flex;
+        flex-direction: column;
+       justify-content: center;
+       align-items: center; 
+       padding-top: 4vw; 
+    }
+    .home-mob div{
+        background-color: rgb(96, 96, 223);
+        padding: 1vw 2vw;
+        font-size: 10px;
+        border-radius: 1vw;
+    }
+    #imagee2{
+        display:flex;
+        align-items: end;
+        width: 100%;
+        /* height: 60%; */
+    }
 }
