--- a/src/pages/Works/Work.css
+++ b/src/pages/Works/Work.css
@@ -1,47 +1,85 @@
-.work{
-    height: 100vh;
-    width: 100vw;
+ .work{
+    width: 100%;
     color: white;
+    padding: 5vw 0vw 15vw 0vw;
+    display:flex ;
+    flex-direction: column;
+    align-items:center ;
+    font-size: 1vw;
 }
 #w1{
-    font-size: 60px;
-    color: white;
-    padding: 30px 0px 20px 100px;
-   
-}
-.work div{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    border-radius: 15px;
-}
-.workk{
-    height: 80vh;
-    width: 80vw;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    gap: 3vw;
-}
-.workk div{
-    width: 21vw;
-    height: 60vh;
-    background-color: rgb(218, 210, 210);
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-}
-.workk h1{
-    font-size: 20px;
-    text-align: center;
-}
-.workk p{
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-.workk img{
     width: 100%;
-    height: 50%;
+    text-align: start;
+    font-size: 3.5em;
+    color: white;
+    padding-left: 3em;
 }
+
+#sticker{
+   margin-top: 3em;
+    display:flex ;
+    flex-direction: column;
+    font-size: 1.5em;
+    gap: 2em;
+    letter-spacing: 0.03cm;
+    align-items: baseline;
+}
+
+#box3{
+    font-size: 0px;
+    color: white;
+    font-weight: bold;
+    transform: rotate(100deg); 
+}
+
+#box2{
+    width: 5em;
+    height: 5em;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-30deg); 
+}
+
+#box1{
+    width: 5em;
+    height: 5em;
+    background: linear-gradient(135deg, #ff7e5f, #feb47b);
+    border-radius: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transform: rotate(-20deg); /* Rotate text back to normal */
+}
+.fancy-button {
+    background-color:transparent;
+    color: white;
+    border: 2px solid;
+    border-image: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%) 1;
+    padding:0.6em 1em 0.6em 1em;
+    border-radius: 8px;
+    cursor: pointer;
+    text-decoration: none;
+    color: white;
+  }
+
+  @media (max-width:680px){
+    .work{
+        font-size: 2.5vw;
+    }
+    #w1{
+        font-size: 2.3em;
+        padding-left: 1.4em;
+    }
+    #sticker{
+        font-size: 1em;
+    }
+    #box3 svg{
+        width: 20px;
+        height: 20px;
+    }
+  }
