--- a/src/pages/Skills/Skills.css
+++ b/src/pages/Skills/Skills.css
@@ -4,7 +4,7 @@
     display:flex ;
     align-items: center;
     flex-direction: column;
-    font-size: 1vw
+    font-size: 1vw;
 }
 .skillset{
     margin-top: 3vw;
@@ -13,7 +13,6 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
 }
 .skillset div img{
     width: 6vw;
@@ -32,7 +31,11 @@
 @media (max-width:680px){
     .skil{
         font-size: 2.5vw;
+        margin: 20vw 0vw;
     }
+  .skillset{
+    width: 70vw;
+  }
     .skillset div img{
         width: 13vw;
         height: 13vw;
