--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: space-between;
     height: 6vw;
-    width: 100vw;
+    max-width: 100vw;
     list-style: none; 
     font-size: 1vw;
     z-index: 999;
