--- a/src/pages/Works/Work.css
+++ b/src/pages/Works/Work.css
@@ -55,6 +55,42 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transform: rotate(-20deg); /* Rotate text back to normal */
 }
+#box1a{
+    width: 5em;
+    height: 5em;
+    background:linear-gradient(135deg, #e81cff, #3e393f);
+    border-radius: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transform: rotate(-20deg); /* Rotate text back to normal */
+}
+#box1b{
+    width: 5em;
+    height: 5em;
+    background: linear-gradient(135deg, #ff7e5f, #feb47b);
+    border-radius: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transform: rotate(-20deg); /* Rotate text back to normal */
+}
+#box1c{
+    width: 5em;
+    height: 5em;
+    background:linear-gradient(135deg, #ff7a1c, #cb41c4);
+    border-radius: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transform: rotate(-20deg); /* Rotate text back to normal */
+}
 .fancy-button {
     background-color:transparent;
     color: white;
